# DERIBIT

./: CMakeLists.txt  Dockerfile  README.md  build.sh  client.py  config.json
src/: main
src/api/: api_client.cpp  api_client.h
src/core/: order_manager.cpp  order_manager.h
src/utils/: logger.cpp  logger.h
src/websocket/: websocket_server.cpp  websocket_server.h
